Css fix  to Stretch the body to full viewport height

--- a/chat-react-app/src/Input.css
+++ b/chat-react-app/src/Input.css
@@ -16,8 +16,10 @@
   padding-left: 20px;
   padding-right: 20px;
   background-color: #f1f1f1e8;
+  border: 0;
   border-top: 1px solid rgba(109, 108, 109, 0.54);
-  border-radius: 0;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   -webkit-appearance: none;
 }
 
