--- a/chat-react-app/src/index.css
+++ b/chat-react-app/src/index.css
@@ -7,6 +7,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   position: relative;
+  overflow: hidden;
+  min-height: 100vh;
 }
 
 code {
